Fix overflow arrows

--- a/app/assets/stylesheets/pythia_submission.css.less
+++ b/app/assets/stylesheets/pythia_submission.css.less
@@ -10,4 +10,5 @@
 #tutor #tutorelement {
     overflow: scroll;
     height: 600px;
+    position: relative;
 }
